[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Youmi Koh <youmi.koh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
jupyter = "^1.0.0"
notebook = "^6.5.4"
numpy = "1.23"
h5py = "^3.8.0"
clingo = "^5.6.2"
cffi = "^1.15.1"
plingo = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
